# routers/commentsRouter_controllers.go
@@ -63,6 +63,15 @@ func init() {
 
     beego.GlobalControllerRouter["An_service/controllers:TripController"] = append(beego.GlobalControllerRouter["An_service/controllers:TripController"],
         beego.ControllerComments{
+            Method: "AddFollow",
+            Router: `/wxmp/follow/add`,
+            AllowHTTPMethods: []string{"get"},
+            MethodParams: param.Make(),
+            Filters: nil,
+            Params: nil})
+
+    beego.GlobalControllerRouter["An_service/controllers:TripController"] = append(beego.GlobalControllerRouter["An_service/controllers:TripController"],
+        beego.ControllerComments{
             Method: "GetFollowState",
             Router: `/wxmp/follow/state`,
             AllowHTTPMethods: []string{"get"},
